@@ -24,7 +24,7 @@ RUN mkdir -p /usr/share/maven /usr/share/maven/ref \
 # 6- Define environmental variables required by Maven, like Maven_Home directory and where the maven repo is located
 ENV MAVEN_HOME /usr/share/maven
 ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
-
+RUN export MAVEN_OPTS='-Xmx2048m -XX:MaxPermSize=2048m'
 COPY . /home/work_dir
 
 RUN mvn -B -f /home/work_dir -DskipTests install
